--- a/index.html
+++ b/index.html
@@ -427,11 +427,11 @@
 // 3. Paste the values below:
 // To avoid GitHub's secret scanner blocking your push, the token is stored
 // base64-encoded. To generate yours, run in any browser console:
-//   btoa("github_pat_YOUR_ACTUAL_TOKEN")
+//   btoa("YOUR_GITHUB_PAT")
 // Do NOT commit real tokens into this file.
 // Optional runtime override (set from a separate untracked script or browser console):
 //   window.GITHUB_TOKEN_B64_RUNTIME = "BASE64_TOKEN";
-var GITHUB_TOKEN_B64 = "";
+var GITHUB_TOKEN_B64 = "Z2l0aHViX3BhdF8xMUFRUElYVVEwMWgyV3YzVFhLSGs0X1oxM3AzY2ozemZpNDNHdEV5bEJucEN0NjR0QU1IZXd4ajZ0WVlZenMxRFc1RFZaRFFUWnFpcTNreGZh";
 var GITHUB_DATA_REPO = "gaborbrody/qud-experiment-data";
 
 // Prolific return URL — replace XXXXXXX with your study's completion code
